--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         <img src="img/logo.png" width="75px" alt="krc" class="px-2" id="krc">
         <h1 class="text-xl font-bold">KRC LAPANBELAS</h1>
       </div>
-      <div class="nav-links duration-500 md:static absolute md:min-h-fit min-h-[35vh] left-0 top-[-999%] md:w-auto  w-full flex items-center px-5">
+      <div class="nav-links duration-500 md:static absolute md:min-h-fit min-h-[40vh] left-0 top-[-999%] md:w-auto  w-full flex items-center px-5">
         <ul class="menu flex md:flex-row flex-col md:items-center md:gap-[2vw] gap-8">
           <li><a class="text-xl" id="nav-navbar" href="#home">Home</a></li>
           <li><a class="text-xl" id="nav-navbar" href="#about">About Us</a></li>
           <li><a class="text-xl" id="nav-navbar" href="#member">Member</a></li>
-          <li><a class="text-xl" id="nav-navbar" href="#contact">Contact</a></li>
+          <li><a class="text-xl" id="nav-navbar" href="#activity">Activities</a></li>
         </ul>
       </div>
       <div class="flex items-center gap-6">
@@ -35,7 +35,7 @@
 
   <section id="home" >
     <div class="flex items-center justify-center h-screen">
-      <h1 class="font-bold text-4xl text-center" id="headline">Selamat Datang di Website Kami</h1>
+      <h1 class="font-extrabold text-4xl text-center text-white" id="headline">KRC: A Place to Share, Laugh, and Forge Warm Connections Together</h1>
     </div>
   </section>
 
@@ -45,7 +45,7 @@
     </div>
     <div class="card bg-cyan-950 shadow-xl mx-8">
       <div class="card-body">
-        <p class="text-justify text-lg">Cita-cita tidak tercapai dengan sendiri, tetapi melalui interaksi yang menghasilkan kolaborasi. Selasa, 5 September 2023 adalah hari dimana pertama kali kami bertemu. Berawal dari makan bersama di Waroeng Rahmad lantai dua, kami yang berasal dari berbagai tujuan hidup berkumpul dalam sebuah pertemanan yang harmonis kami menyebutnya KRC Lapanbelas. KRC adalah ruang atau wadah di mana kami saling berbagi cerita kehidupan dan bertukar ide, sambil tertawa dan bercanda tanpa batas. Kami tidak bisa mendefinisikan persahabatan kami dengan kata-kata, namun bersama KRC menjadi petualangan yang tak terlupakan. <br> <br>Kami berharap apa yang kami bagikan di website ini dapat memberi motivasi kepada siapa pun yang membacanya, menginspirasi dalam perjalanan mereka melewati hari ini, besok, dan seterusnya. KRC Lapanbelas adalah bukti bahwa persahabatan sejati tidak hanya hadir di kisah dongeng, melainkan juga tumbuh di kehidupan nyata melalui keberagaman, dukungan, dan kehangatan yang tak tergantikan. Mari bersama-sama mewujudkan impian dan membangun cerita kehidupan yang penuh makna.<br><br> Salam dari kami, <br> KRC LAPANBELAS</p>
+        <p class="text-justify text-lg">KRC adalah ruang atau wadah di mana kami saling berbagi cerita kehidupan dan bertukar ide, sambil tertawa dan bercanda tanpa batas. Kami tidak bisa mendefinisikan persahabatan kami dengan kata-kata, namun bersama KRC menjadi petualangan yang tak terlupakan. KRC Lapanbelas adalah bukti bahwa persahabatan sejati tidak hanya hadir di kisah dongeng, melainkan juga tumbuh di kehidupan nyata melalui keberagaman, dukungan, dan kehangatan yang tak tergantikan. Mari bersama-sama mewujudkan impian dan membangun cerita kehidupan yang penuh makna.<br><br> Salam dari kami, <br> KRC LAPANBELAS</p>
       </div>
     </div>
   </section>
@@ -59,7 +59,7 @@
     <!-- card starts -->
     <div class="flex flex-wrap mx-6">
       <!-- card 1-->
-      <div class="card w-96 bg-cyan-950 shadow-xl mx-auto my-10">
+      <div class="card w-96 bg-cyan-900 shadow-xl mx-auto my-10 hover:bg-teal-950 duration-500">
         <figure class="px-10 pt-10 ">
           <img src="img/member/abim.JPG" width="150px" alt="Shoes" class="rounded-full" />
         </figure>
@@ -75,7 +75,7 @@
       </div>
 
     <!-- card 2 -->
-      <div class="card w-96 bg-cyan-950 shadow-xl mx-auto my-10">
+      <div class="card w-96 bg-cyan-900 shadow-xl mx-auto my-10 hover:bg-teal-950 duration-500">
         <figure class="px-10 pt-10">
           <img src="img/member/adit.jpg" width="150px" alt="Shoes" class="rounded-full" />
         </figure>
@@ -91,7 +91,7 @@
       </div>
 
     <!-- card 3-->
-      <div class="card w-96 bg-cyan-950 shadow-xl mx-auto my-10">
+      <div class="card w-96 bg-cyan-900 shadow-xl mx-auto my-10 hover:bg-teal-950 duration-500">
         <figure class="px-10 pt-10">
           <img src="img/member/alip.jpg" width="150px" alt="Shoes" class="rounded-full" />
         </figure>
@@ -107,7 +107,7 @@
       </div>
 
       <!-- card 4-->
-      <div class="card w-96 bg-cyan-950 shadow-xl mx-auto my-10">
+      <div class="card w-96 bg-cyan-900 shadow-xl mx-auto my-10 hover:bg-teal-950 duration-500">
         <figure class="px-10 pt-10">
           <img src="img/member/dika.JPG" width="150px" alt="Shoes" class="rounded-full" />
         </figure>
@@ -123,7 +123,7 @@
       </div>
 
     <!-- card 5-->
-      <div class="card w-96 bg-cyan-950 shadow-xl mx-auto my-10">
+      <div class="card w-96 bg-cyan-900 shadow-xl mx-auto my-10 hover:bg-teal-950 duration-500">
         <figure class="px-10 pt-10">
           <img src="img/member/arya.jpg" width="150px" alt="Shoes" class="rounded-full" />
         </figure>
@@ -132,14 +132,14 @@
           <p>Back-End Developer</p>
           <div class="card-actions">
             <a href="https://www.instagram.com/aryazaky__/" target="_blank"><i data-feather="instagram"></i></a>
-            <a href="mailto:aryazakypradipta@gmail.com"><i data-feather="mail"></i></a>
+            <a href="mailto:aryazakypradipta@gmail.com" target="_blank"><i data-feather="mail"></i></a>
             <a href="https://wa.me/6282157962196" target="_blank"><i data-feather="phone"></i></a>
           </div>
         </div>
       </div>
 
     <!-- card 6-->
-      <div class="card w-96 bg-cyan-950 shadow-xl mx-auto my-10">
+      <div class="card w-96 bg-cyan-900 shadow-xl mx-auto my-10 hover:bg-teal-950 duration-500">
         <figure class="px-10 pt-10">
           <img src="img/member/syachdan.JPG" width="150px" alt="Shoes" class="rounded-full" />
         </figure>
@@ -155,7 +155,7 @@
       </div>
 
     <!-- card 7-->
-      <div class="card w-96 bg-cyan-950 shadow-xl mx-auto my-10">
+      <div class="card w-96 bg-cyan-900 shadow-xl mx-auto my-10 hover:bg-teal-950 duration-500">
         <figure class="px-10 pt-10">
           <img src="img/member/faisal.jpg" width="150px" alt="Shoes" class="rounded-full" />
         </figure>
@@ -171,7 +171,7 @@
       </div>
 
     <!-- card 8-->
-      <div class="card w-96 bg-cyan-950 shadow-xl mx-auto my-10">
+      <div class="card w-96 bg-cyan-900 shadow-xl mx-auto my-10 hover:bg-teal-950 duration-500">
         <figure class="px-10 pt-10">
           <img src="img/member/fatwa.JPG" width="150px" alt="Shoes" class="rounded-full" />
         </figure>
@@ -187,7 +187,7 @@
       </div>
 
     <!-- card 9-->
-      <div class="card w-96 bg-cyan-950 shadow-xl mx-auto my-10">
+      <div class="card w-96 bg-cyan-900 shadow-xl mx-auto my-10 hover:bg-teal-950 duration-500">
         <figure class="px-10 pt-10">
           <img src="img/member/rakha.jpg" width="150px" alt="Shoes" class="rounded-full" />
         </figure>
@@ -201,8 +201,94 @@
           </div>
         </div>
       </div>
+
+    <!-- card 10-->
+      <div class="card w-96 bg-rose-900 shadow-xl mx-auto my-10 hover:bg-rose-950 duration-500">
+        <figure class="px-10 pt-10">
+          <img src="img/member/anit.jpg" width="150px" alt="Shoes" class="rounded-full" />
+        </figure>
+        <div class="card-body items-center text-center">
+          <h2 class="card-title">Anitya C R Sinaga</h2>
+          <p>Intern Staff</p>
+          <div class="card-actions">
+            <a href="https://www.instagram.com/rakharandikaaa/" target="_blank"><i data-feather="instagram"></i></a>
+            <a href="mailto:11231060@student.itk.ac.id" target="_blank"><i data-feather="mail"></i></a>
+            <a href="https://wa.me/6289524000806" target="_blank"><i data-feather="phone"></i></a>
+          </div>
+        </div>
+      </div>
+
+    <!-- card 11-->
+      <div class="card w-96 bg-rose-900 shadow-xl mx-auto my-10 hover:bg-rose-950 duration-500">
+        <figure class="px-10 pt-10">
+          <img src="img/member/syifa.JPG" width="150px" alt="Shoes" class="rounded-full" />
+        </figure>
+        <div class="card-body items-center text-center">
+          <h2 class="card-title">Nurul Asyifah</h2>
+          <p>Intern Staff</p>
+          <div class="card-actions">
+            <a href="https://www.instagram.com/rakharandikaaa/" target="_blank"><i data-feather="instagram"></i></a>
+            <a href="mailto:11231060@student.itk.ac.id" target="_blank"><i data-feather="mail"></i></a>
+            <a href="https://wa.me/6289524000806" target="_blank"><i data-feather="phone"></i></a>
+          </div>
+        </div>
+      </div>
   </section>
-  
+
+  <section id="activity">
+    <div class="pt-28 mb-10">
+      <h1 class="text-center font-bold text-3xl">Our Activities</h1>
+    </div>
+    <!-- chat -->
+    <div class="mx-8 mb-9">
+      <div class="chat chat-start">
+        <div class="chat-image avatar">
+          <div class="w-10 rounded-full">
+            <img alt="Tailwind CSS chat bubble component" src="img/member/alip.jpg" />
+          </div>
+        </div>
+        <div class="chat-header">
+          Alief
+          <time class="text-xs opacity-50">12:45</time>
+        </div>
+        <div class="chat-bubble">Hewan apa yang nempel di dinding?</div>
+        <div class="chat-footer opacity-50">
+          Delivered
+        </div>
+      </div>
+      <div class="chat chat-end">
+        <div class="chat-image avatar">
+          <div class="w-10 rounded-full">
+            <img alt="Tailwind CSS chat bubble component" src="img/member/arya.jpg" />
+          </div>
+        </div>
+        <div class="chat-header">
+          Arya
+          <time class="text-xs opacity-50">12:46</time>
+        </div>
+        <div class="chat-bubble">Apaan tuuh</div>
+        <div class="chat-footer opacity-50">
+          Seen
+        </div>
+      </div>
+      <div class="chat chat-start">
+        <div class="chat-image avatar">
+          <div class="w-10 rounded-full">
+            <img alt="Tailwind CSS chat bubble component" src="img/member/alip.jpg" />
+          </div>
+        </div>
+        <div class="chat-header">
+          Alief
+          <time class="text-xs opacity-50">12:47</time>
+        </div>
+        <div class="chat-bubble">Stiker sapi xixixixixixi</div>
+        <div class="chat-footer opacity-50">
+          Delivered
+        </div>
+      </div>
+    </div>
+  </section>
+
   <footer id="contact" class="footer p-10 bg-neutral text-neutral-content">
     <aside class="ml-10">
       <img src="img/logo.png" width="110px"  alt="logo">
