--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <section id="home" >
     <div class="flex items-center justify-center h-screen">
-      <h1 class="font-extrabold text-4xl text-center text-white" id="headline">KRC: A Place to Share, Laugh, and Forge Warm Connections Together</h1>
+      <h1 class="font-extrabold text-4xl text-center text-white" id="headline">KRC is A Place to Share, Laugh, and Forge Warm Connections Together</h1>
     </div>
   </section>
 
