--- a/index.html
+++ b/index.html
@@ -211,9 +211,19 @@
           <h2 class="card-title">Anitya C R Sinaga</h2>
           <p>Intern Staff</p>
           <div class="card-actions">
-            <a href="https://www.instagram.com/rakharandikaaa/" target="_blank"><i data-feather="instagram"></i></a>
-            <a href="mailto:11231060@student.itk.ac.id" target="_blank"><i data-feather="mail"></i></a>
-            <a href="https://wa.me/6289524000806" target="_blank"><i data-feather="phone"></i></a>
+            <a href="https://www.instagram.com/anitya.charolinaaa_/" target="_blank"><i data-feather="instagram"></i></a>
+            <a href="mailto:11231011@student.itk.ac.id" target="_blank"><i data-feather="mail"></i></a>
+             <!-- You can open the modal using ID.showModal() method -->
+             <i class="icon" data-feather="phone" onclick="my_modal_3.showModal()"></i>
+             <dialog id="my_modal_3" class="modal">
+               <div class="modal-box bg-emerald-950 text-white">
+                 <form method="dialog">
+                   <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
+                 </form>
+                 <h3 class="font-bold text-lg">Eiits!</h3>
+                 <p class="py-4">Lewat e-Mail aja hubunginya gausa WhatsApp😉.</p>
+               </div>
+             </dialog>
           </div>
         </div>
       </div>
@@ -227,9 +237,19 @@
           <h2 class="card-title">Nurul Asyifah</h2>
           <p>Intern Staff</p>
           <div class="card-actions">
-            <a href="https://www.instagram.com/rakharandikaaa/" target="_blank"><i data-feather="instagram"></i></a>
-            <a href="mailto:11231060@student.itk.ac.id" target="_blank"><i data-feather="mail"></i></a>
-            <a href="https://wa.me/6289524000806" target="_blank"><i data-feather="phone"></i></a>
+            <a href="https://www.instagram.com/_nrlasyifaa/" target="_blank"><i data-feather="instagram"></i></a>
+            <a href="mailto:11231075@student.itk.ac.id" target="_blank"><i data-feather="mail"></i></a>
+            <!-- You can open the modal using ID.showModal() method -->
+            <i class="icon" data-feather="phone" onclick="my_modal_4.showModal()"></i>
+            <dialog id="my_modal_4" class="modal">
+              <div class="modal-box bg-emerald-950 text-white">
+                <form method="dialog">
+                  <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
+                </form>
+                <h3 class="font-bold text-lg">Eiits!</h3>
+                <p class="py-6">Lewat e-Mail aja hubunginya gausa WhatsApp😉.</p>
+              </div>
+            </dialog>
           </div>
         </div>
       </div>
@@ -251,7 +271,7 @@
           Alief
           <time class="text-xs opacity-50">12:45</time>
         </div>
-        <div class="chat-bubble">Hewan apa yang nempel di dinding?</div>
+        <div class="chat-bubble">Sapi apa yang nempel di dinding?</div>
         <div class="chat-footer opacity-50">
           Delivered
         </div>
