--- a/index.html
+++ b/index.html
@@ -34,8 +34,13 @@
  </nav>
 
   <section id="home" >
-    <div class="flex items-center justify-center h-screen">
-      <h1 class="font-extrabold text-4xl text-center text-white" id="headline">KRC is A Place to Share, Laugh, and Forge Warm Connections Together</h1>
+    <div class="hero min-h-screen" style="background-image: url(img/home.png);">
+      <div class="hero-overlay bg-opacity-60"></div>
+      <div class="hero-content text-center text-neutral-content">
+        <div class="max-w-md">
+          <h1 class="mb-5 text-4xl font-bold">Hello World, Welcome to Our Website.</h1>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -221,7 +226,7 @@
                    <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
                  </form>
                  <h3 class="font-bold text-lg">Eiits!</h3>
-                 <p class="py-4">Lewat e-Mail aja hubunginya gausa WhatsApp😉.</p>
+                 <p class="py-4">Lewat e-Mail aja hubunginnya gausa WhatsApp😉.</p>
                </div>
              </dialog>
           </div>
@@ -247,7 +252,33 @@
                   <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
                 </form>
                 <h3 class="font-bold text-lg">Eiits!</h3>
-                <p class="py-6">Lewat e-Mail aja hubunginya gausa WhatsApp😉.</p>
+                <p class="py-6">Lewat e-Mail aja hubunginnya gausa WhatsApp😉.</p>
+              </div>
+            </dialog>
+          </div>
+        </div>
+      </div>
+
+      <!-- card 12-->
+      <div class="card w-96 bg-rose-900 shadow-xl mx-auto my-10 hover:bg-rose-950 duration-500">
+        <figure class="px-10 pt-10">
+          <img src="img/member/profile.png" width="150px" alt="who" class="rounded-full" />
+        </figure>
+        <div class="card-body items-center text-center">
+          <h2 class="card-title">Who?</h2>
+          <p>Intern Staff</p>
+          <div class="card-actions">
+            <a href="https" target="_blank"><i data-feather="instagram"></i></a>
+            <a href="mailto:" target="_blank"><i data-feather="mail"></i></a>
+            <!-- You can open the modal using ID.showModal() method -->
+            <i class="icon" data-feather="phone" onclick="my_modal_4.showModal()"></i>
+            <dialog id="my_modal_5" class="modal">
+              <div class="modal-box bg-emerald-950 text-white">
+                <form method="dialog">
+                  <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
+                </form>
+                <h3 class="font-bold text-lg">Eiits!</h3>
+                <p class="py-6">Lewat e-Mail aja hubunginnya gausa WhatsApp😉.</p>
               </div>
             </dialog>
           </div>
@@ -301,7 +332,7 @@
           Alief
           <time class="text-xs opacity-50">12:47</time>
         </div>
-        <div class="chat-bubble">Stiker sapi xixixixixixi</div>
+        <div class="chat-bubble">Stiker sapi xixixixixixieee</div>
         <div class="chat-footer opacity-50">
           Delivered
         </div>
