--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <div class="hero min-h-screen" style="background-image: url(img/home.png);">
       <div class="hero-overlay bg-opacity-60"></div>
       <div class="hero-content text-center text-neutral-content">
-        <div class="max-w-md">
-          <h1 class="mb-5 text-4xl font-bold">Hello World, Welcome to Our Website.</h1>
+        <div class="max-w-full">
+          <h1 class="mb-5 text-4xl font-bold">KRC Is A Place Where Laugh and Happiness Come Together </h1>
         </div>
       </div>
     </div>
@@ -345,6 +345,14 @@
       <img src="img/logo.png" width="110px"  alt="logo">
       <p>Kuliah Rahmad Cumlaude<br/>Copyright © 2023 - KRC</p>
     </aside> 
+    <nav>
+      <header class="footer-title">Social</header> 
+      <div class="grid grid-flow-col gap-4">
+        <a href="https://www.instagram.com/krc.lapanbelas/" target="_blank"><i data-feather="instagram"></i></a>
+        <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path></svg></a>
+        <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"></path></svg></a>
+      </div>
+    </nav>
   </footer>
 <!-- icons -->
 <script>
