--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
     <div class="card bg-cyan-950 shadow-xl mx-8">
       <div class="card-body">
-        <p class="text-justify text-lg">KRC adalah ruang atau wadah di mana kami saling berbagi cerita kehidupan dan bertukar ide, sambil tertawa dan bercanda tanpa batas. Kami tidak bisa mendefinisikan persahabatan kami dengan kata-kata, namun bersama KRC menjadi petualangan yang tak terlupakan. KRC Lapanbelas adalah bukti bahwa persahabatan sejati tidak hanya hadir di kisah dongeng, melainkan juga tumbuh di kehidupan nyata melalui keberagaman, dukungan, dan kehangatan yang tak tergantikan. Mari bersama-sama mewujudkan impian dan membangun cerita kehidupan yang penuh makna.<br><br> Salam dari kami, <br> KRC LAPANBELAS</p>
+        <p class="text-justify text-lg tracking-tight">KRC adalah ruang atau wadah di mana kami saling berbagi cerita kehidupan dan bertukar ide, sambil tertawa dan bercanda tanpa batas. Kami tidak bisa mendefinisikan persahabatan kami dengan kata-kata, namun bersama KRC menjadi petualangan yang tak terlupakan. KRC Lapanbelas adalah bukti bahwa persahabatan sejati tidak hanya hadir di kisah dongeng, melainkan juga tumbuh di kehidupan nyata melalui keberagaman, dukungan, dan kehangatan yang tak tergantikan. Mari bersama-sama mewujudkan impian dan membangun cerita kehidupan yang penuh makna.<br><br> Salam dari kami, <br> KRC LAPANBELAS</p>
       </div>
     </div>
   </section>
@@ -349,8 +349,17 @@
       <header class="footer-title">Social</header> 
       <div class="grid grid-flow-col gap-4">
         <a href="https://www.instagram.com/krc.lapanbelas/" target="_blank"><i data-feather="instagram"></i></a>
-        <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path></svg></a>
-        <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"></path></svg></a>
+        <a href="mailto:krclapanbelas@gmail.com"><i data-feather="mail"></i></a>
+        <i class="icon" data-feather="youtube" onclick="my_modal_6.showModal()"></i>
+             <dialog id="my_modal_6" class="modal">
+               <div class="modal-box bg-error text-white text-center">
+                 <form method="dialog">
+                   <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
+                 </form>
+                 <h3 class="font-bold text-xl">Sorry!</h3>
+                 <p class="py-8 text-lg">Our Channel is Under Construction😉.</p>
+               </div>
+             </dialog>
       </div>
     </nav>
   </footer>
