--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,7 +21,7 @@
       </div>
       <div class="nav-links duration-500 md:static absolute md:min-h-fit min-h-[40vh] left-0 top-[-999%] md:w-auto  w-full flex items-center px-5">
         <ul class="menu flex md:flex-row flex-col md:items-center md:gap-[2vw] gap-8">
-          <li><a class="text-xl" id="nav-navbar" href="#home">Home</a></li>
+          <li><a class="text-xl" id="nav-navbar" href="#">Home</a></li>
           <li><a class="text-xl" id="nav-navbar" href="#about">About Us</a></li>
           <li><a class="text-xl" id="nav-navbar" href="#member">Member</a></li>
           <li><a class="text-xl" id="nav-navbar" href="#activity">Activities</a></li>
@@ -289,7 +289,12 @@
   <section id="activity">
     <div class="pt-28 mb-10">
       <h1 class="text-center font-bold text-3xl">Our Activities</h1>
-    </div>
+    </div>    
+  
+  </section>
+
+  <!-- closingan -->
+  <section id="closing">
     <!-- chat -->
     <div class="mx-8 mb-9">
       <div class="chat chat-start">
@@ -349,17 +354,9 @@
       <header class="footer-title">Social</header> 
       <div class="grid grid-flow-col gap-4">
         <a href="https://www.instagram.com/krc.lapanbelas/" target="_blank"><i data-feather="instagram"></i></a>
-        <a href="mailto:krclapanbelas@gmail.com"><i data-feather="mail"></i></a>
-        <i class="icon" data-feather="youtube" onclick="my_modal_6.showModal()"></i>
-             <dialog id="my_modal_6" class="modal">
-               <div class="modal-box bg-error text-white text-center">
-                 <form method="dialog">
-                   <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
-                 </form>
-                 <h3 class="font-bold text-xl">Sorry!</h3>
-                 <p class="py-8 text-lg">Our Channel is Under Construction😉.</p>
-               </div>
-             </dialog>
+        <a href="mailto:krclapanbelas@gmail.com" target="_blank"><i data-feather="mail"></i></a>
+        <a href="https://www.youtube.com/@krc.lapanbelas" target="_blank"><i data-feather="youtube"></i></a>
+        
       </div>
     </nav>
   </footer>
