--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
  <script src="https://unpkg.com/feather-icons"></script>
  <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 </head>
-<body>
-
+<body class="bg-[#1d232a]">
  <nav class="fixed top-0 z-50 w-full flex justify-between items-center w-[92%] mx-auto">
     <div class="navbar bg-opacity-50" id="navbar">
       <div class="flex-1">
@@ -21,7 +20,7 @@
       </div>
       <div class="nav-links duration-500 md:static absolute md:min-h-fit min-h-[40vh] left-0 top-[-999%] md:w-auto  w-full flex items-center px-5">
         <ul class="menu flex md:flex-row flex-col md:items-center md:gap-[2vw] gap-8">
-          <li><a class="text-xl" id="nav-navbar" href="#">Home</a></li>
+          <li><a class="text-xl" id="nav-navbar" href="#home">Home</a></li>
           <li><a class="text-xl" id="nav-navbar" href="#about">About Us</a></li>
           <li><a class="text-xl" id="nav-navbar" href="#member">Member</a></li>
           <li><a class="text-xl" id="nav-navbar" href="#activity">Activities</a></li>
@@ -48,9 +47,10 @@
     <div class="pt-28 mb-10">
       <h1 class="text-center font-bold text-3xl">About Us</h1>
     </div>
-    <div class="card bg-cyan-950 shadow-xl mx-8">
+    <div class="card lg:card-side bg-cyan-900 shadow-xl pb-9 mx-8">
+      <figure class="ml-10 mt-9"><img src="img/activity/1.jpeg" class="rounded-xl" alt="Album"/></figure>
       <div class="card-body">
-        <p class="text-justify text-lg tracking-tight">KRC adalah ruang atau wadah di mana kami saling berbagi cerita kehidupan dan bertukar ide, sambil tertawa dan bercanda tanpa batas. Kami tidak bisa mendefinisikan persahabatan kami dengan kata-kata, namun bersama KRC menjadi petualangan yang tak terlupakan. KRC Lapanbelas adalah bukti bahwa persahabatan sejati tidak hanya hadir di kisah dongeng, melainkan juga tumbuh di kehidupan nyata melalui keberagaman, dukungan, dan kehangatan yang tak tergantikan. Mari bersama-sama mewujudkan impian dan membangun cerita kehidupan yang penuh makna.<br><br> Salam dari kami, <br> KRC LAPANBELAS</p>
+        <p class="text-justify">KRC adalah ruang atau wadah di mana kami saling berbagi cerita kehidupan dan bertukar ide, sambil tertawa dan bercanda tanpa batas. Kami tidak bisa mendefinisikan persahabatan kami dengan kata-kata, namun bersama KRC menjadi petualangan yang tak terlupakan. KRC Lapanbelas adalah bukti bahwa persahabatan sejati tidak hanya hadir di kisah dongeng, melainkan juga tumbuh di kehidupan nyata melalui keberagaman, dukungan, dan kehangatan yang tak tergantikan. Mari bersama-sama mewujudkan impian dan membangun cerita kehidupan yang penuh makna. <br> <br> Salam dari kami, <br> KRC LAPANBELAS</p>
       </div>
     </div>
   </section>
@@ -262,13 +262,13 @@
       <!-- card 12-->
       <div class="card w-96 bg-rose-900 shadow-xl mx-auto my-10 hover:bg-rose-950 duration-500">
         <figure class="px-10 pt-10">
-          <img src="img/member/profile.png" width="150px" alt="who" class="rounded-full" />
+          <img src="img/member/suzy.jpg" width="150px" alt="who" class="rounded-full" />
         </figure>
         <div class="card-body items-center text-center">
-          <h2 class="card-title">Who?</h2>
+          <h2 class="card-title">Bae Suzy</h2>
           <p>Intern Staff</p>
           <div class="card-actions">
-            <a href="https" target="_blank"><i data-feather="instagram"></i></a>
+            <a href="https://www.instagram.com/skuukzky/" target="_blank"><i data-feather="instagram"></i></a>
             <a href="mailto:" target="_blank"><i data-feather="mail"></i></a>
             <!-- You can open the modal using ID.showModal() method -->
             <i class="icon" data-feather="phone" onclick="my_modal_4.showModal()"></i>
