--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <h1 class="text-center font-bold text-3xl">About Us</h1>
     </div>
     <div class="card lg:card-side bg-cyan-900 shadow-xl pb-9 mx-8">
-      <figure class="ml-10 mt-9"><img src="img/activity/1.jpeg" class="rounded-xl" alt="Album"/></figure>
+      <figure class="mx-10 mt-9"><img src="img/activity/1.jpeg" class="rounded-xl" alt="Album"/></figure>
       <div class="card-body">
         <p class="text-justify">KRC adalah ruang atau wadah di mana kami saling berbagi cerita kehidupan dan bertukar ide, sambil tertawa dan bercanda tanpa batas. Kami tidak bisa mendefinisikan persahabatan kami dengan kata-kata, namun bersama KRC menjadi petualangan yang tak terlupakan. KRC Lapanbelas adalah bukti bahwa persahabatan sejati tidak hanya hadir di kisah dongeng, melainkan juga tumbuh di kehidupan nyata melalui keberagaman, dukungan, dan kehangatan yang tak tergantikan. Mari bersama-sama mewujudkan impian dan membangun cerita kehidupan yang penuh makna. <br> <br> Salam dari kami, <br> KRC LAPANBELAS</p>
       </div>
