--- a/index.html
+++ b/index.html
@@ -33,13 +33,9 @@
  </nav>
 
   <section id="home" >
-    <div class="hero min-h-screen" style="background-image: url(img/home.png);">
+    <div class="hero min-h-screen mt-4" style="background-image: url(img/homen.png);">
       <div class="hero-overlay bg-opacity-60"></div>
-      <div class="hero-content text-center text-neutral-content">
-        <div class="max-w-full">
-          <h1 class="mb-5 text-4xl font-bold">KRC Is A Place Where Laugh and Happiness Come Together </h1>
-        </div>
-      </div>
+
     </div>
   </section>
 
@@ -142,6 +138,22 @@
           </div>
         </div>
       </div>
+
+    <!-- card 5-->
+    <div class="card w-96 bg-cyan-900 shadow-xl mx-auto my-10 hover:bg-teal-950 duration-500">
+      <figure class="px-10 pt-10">
+        <img src="img/member/aldri.jpeg" width="150px" alt="Shoes" class="rounded-full" />
+      </figure>
+      <div class="card-body items-center text-center">
+        <h2 class="card-title">Muhammad Aldri Saputra</h2>
+        <p>Network Engineer</p>
+        <div class="card-actions">
+          <a href="https://www.instagram.com/aldrisptra/" target="_blank"><i data-feather="instagram"></i></a>
+          <a href="mailto:11231050@gmail.com" target="_blank"><i data-feather="mail"></i></a>
+          <a href="https://wa.me/6285246316364" target="_blank"><i data-feather="phone"></i></a>
+        </div>
+      </div>
+    </div>
 
     <!-- card 6-->
       <div class="card w-96 bg-cyan-900 shadow-xl mx-auto my-10 hover:bg-teal-950 duration-500">
@@ -259,31 +271,6 @@
         </div>
       </div>
 
-      <!-- card 12-->
-      <div class="card w-96 bg-rose-900 shadow-xl mx-auto my-10 hover:bg-rose-950 duration-500">
-        <figure class="px-10 pt-10">
-          <img src="img/member/suzy.jpg" width="150px" alt="who" class="rounded-full" />
-        </figure>
-        <div class="card-body items-center text-center">
-          <h2 class="card-title">Bae Suzy</h2>
-          <p>Intern Staff</p>
-          <div class="card-actions">
-            <a href="https://www.instagram.com/skuukzky/" target="_blank"><i data-feather="instagram"></i></a>
-            <a href="mailto:" target="_blank"><i data-feather="mail"></i></a>
-            <!-- You can open the modal using ID.showModal() method -->
-            <i class="icon" data-feather="phone" onclick="my_modal_4.showModal()"></i>
-            <dialog id="my_modal_5" class="modal">
-              <div class="modal-box bg-emerald-950 text-white">
-                <form method="dialog">
-                  <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
-                </form>
-                <h3 class="font-bold text-lg">Eiits!</h3>
-                <p class="py-6">Lewat e-Mail aja hubunginnya gausa WhatsApp😉.</p>
-              </div>
-            </dialog>
-          </div>
-        </div>
-      </div>
   </section>
 
   <section id="activity">
